# elucido

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/elucido/: AABBox.h  AccelerationStructure.h  Camera.h  DirectionalLight.h  Grid.h  Light.h  Object.h  PerspectiveCamera.h  Ray.h  Scene.h  Sphere.h  Triangle.h  TriangleMesh.h  Utilities.h
src/: CMakeLists.txt  ImagePlane.cpp  ImagePlane.h  Material.cpp  Material.h  Ray.cpp  Ray.h  Utilities.h  main.cpp
src/acceleration/: AccelerationStructure.cpp  AccelerationStructure.h  Grid.cpp
src/accelerators/: AABBox.cpp  AABBox.h  AccelerationStructure.cpp  AccelerationStructure.h  CompactGrid.cpp  CompactGrid.h  DynamicGrid.cpp  DynamicGrid.h  Grid.cpp  Grid.h  KDtreeMidpoint.cpp  KDtreeMidpoint.h
src/cameras/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/core/: Common.cpp  Common.h  ImagePlane.cpp  ImagePlane.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Sample.cpp  Sample.h  Scene.cpp  Scene.h  Utilities.cpp  Utilities.h
src/extra/: ImagePlane.cpp  ImagePlane.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Sample.cpp  Sample.h  Scene.cpp  Scene.h  Utilities.cpp  Utilities.h  UtilityFunctions.cpp
src/lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
src/materials/: Material.h  PhongMaterial.cpp  PhongMaterial.h
src/objects/: AABBox.cpp  AABBox.h  Grid.cpp  Grid.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h
test/: AABBTest.cpp  CMakeLists.txt  SceneParserTest.cpp  TestMain.cpp
test_resources/: testSceneParser_animation.txt  testSceneParser_checkForAnimationIfThingSupportAnimating.txt  testSceneParser_checkForAnimationIfThingToBeTransformedExist.txt  testSceneParser_checkForAnimationIfTransformationTypeIsValid.txt  testSceneParser_checkForInvalidCreateStatement.txt  testSceneParser_checkForObjectIfTypeAndPropertyMatch.txt  testSceneParser_checkForObjectIfVectorIsDefinedBeforeSettingIt.txt  testSceneParser_checkForSceneIfAnimationExistBeforeSetting.txt  testSceneParser_checkIfCameraTypeIsSet.txt  testSceneParser_checkIfColorParamerterValueIsInRange.txt  testSceneParser_checkIfLighTypeIsDefined.txt  testSceneParser_checkIfTransformationHasValidSyntax.txt  testSceneParser_checkIfTransformationTypeIsSupported.txt  testSceneParser_checkTransformThingWhichIsCreated.txt  testSceneParser_exhaustiveSceneCreation.txt  testSceneParser_light.txt  testSceneParser_scene.txt  testSceneParser_vector.txt  test_checkForAnimationIfThingSupportTransformationType.txt  test_checkForImagePlaneIfGammaIsTrueOrFalse.txt  test_checkForImagePlaneIfOutputTypeIsAvailable.txt  test_checkForInvalidStatement.txt  test_checkForNotExistingThingToSet.txt  test_checkForObjectIfMaterialIsDefinedBeforeSettingIt.txt  test_checkForObjectIfVectorIsDefinedBeforeSettingIt2.txt  test_checkForSceneIfASExistBeforeSetting.txt  test_checkForSceneIfImagePlaneExistBeforeSetting.txt  test_checkForSceneIfLightExistBeforeSetting.txt  test_checkForSceneIfObjectExistBeforeSetting.txt  test_checkIfAnimationExist.txt  test_checkIfCameraTypeParameterMatchPersp.txt  test_checkIfLighTypeAndPropertyMatch.txt  test_checkIfThingSupportTransformation.txt  test_checkIfTransformationAxisIsValid.txt  test_exhaustiveSceneCreation.txt  test_image_plane.txt  test_object.txt  test_scene.txt
tests/: AABBTest.cpp  AccelerationStructureTest.cpp  AccelerationStructuresTest.cpp  CMakeLists.txt  CameraTest.cpp  LightTest.cpp  ObjectTest.cpp  RayTest.cpp  RendererTest.cpp  SampleTest.cpp  SceneParserTest.cpp  TransformationTest.cpp
tests/test_resources/: testSceneParser_acceleration_sructure.txt  testSceneParser_checkForASIfTypeIsDefinedBeforeSettingParameter.txt  testSceneParser_checkForAnimationAnimatingMultipleCameras.txt  testSceneParser_checkForAnimationIfTransformationAxisIsValid.txt  testSceneParser_checkForAnimationIfTransformationTypeIsValid.txt  testSceneParser_checkForDuplicate.txt  testSceneParser_checkForInvalidSetProperty.txt  testSceneParser_checkForInvalidSetPropertyValue.txt  testSceneParser_checkForInvalidSetStatement.txt  testSceneParser_checkForObjectIfVectorCountMatchForProperty.txt  testSceneParser_checkForSceneIfCameraExistBeforeSetting.txt  testSceneParser_checkIfAnimationHasValidSyntax.txt  testSceneParser_checkIfCameraTypeParameterMatchOrtho.txt  testSceneParser_checkIfColorParamerterValueHasThreeDigits.txt  testSceneParser_checkIfMaterialColorIsAlreadyDefined.txt  testSceneParser_checkIfMaterialTypeIsSupported.txt  testSceneParser_checkIfTransformationTypeIsValid.txt  testSceneParser_color.txt  testSceneParser_exhaustiveSceneCreation.txt  testSceneParser_material.txt
